--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
           <slot />
         </main>
       </aside>
-      <footer class="[grid-area:player] min-h-[100px]"></footer>
+      <footer class="[grid-area:player] min-h-[100px]">Player</footer>
     </div>
   </body>
 </html>
